# pcb-fabrication-manager

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: pfm-csv-update-template.md
.github/scripts/: pfm_export.py  pfm_gh_build_csv.py  pfm_issue.py
.github/workflows/: blank.yml  pfm-github.yml
src/: app.py  config.py  csv_handler.py  pfm_file.py  yaml_parser.py
src/docs/: design.md
