[project]
name = "pcb-fabrication-manager"
description = "hello"
authors = [{name = "Bahanur Enis", email = "bahanurenis@gmail.com"}]
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "click",
    "pandas",
    "numpy",

]

[project.scripts]
pfm = "app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]
